# simple_cryptocurrency_rs

./: .gitignore  Cargo.toml  Makefile
src/: main.rs
src/blockchain/: block.rs  global_state.rs  mod.rs  transaction.rs
src/networking/: interface.rs  message.rs  mod.rs
test/: Dockerfile  docker-compose.yml
