[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
k256 = {version = "0.13.1", features = ["serde", "pem"]}
rand_core = "0.6.4"
serde = {version = "1.0.192", features = ["derive"]}
